tests/neg/i12361.scala
import language.postfixOps
object Test {
    foo = macro Impls . foo [ U ] +=    // error  // error
}
